Updates cloudversion and images list for CC/3.15 release.

--- a/calico/network-policy/istio/app-layer-policy.mdx
+++ b/calico/network-policy/istio/app-layer-policy.mdx
@@ -189,7 +189,7 @@ If the namespace already has pods in it, you must recreate them for this to take
 Envoy must be able to communicate with the `istio-pilot.istio-system service`. If you apply any egress policies to your pods, you _must_ enable access.
 
 ```batch
-kubectl apply -f {{filesUrl}}/getting-started/kubernetes/installation/manifests/app-layer-policy/allow-istio-pilot.yaml
+kubectl apply -f {{tutorialFilesURL}}/allow-istio-pilot.yaml
 ```
 
 :::
