--- a/calico/networking/ipam/migrate-pools.mdx
+++ b/calico/networking/ipam/migrate-pools.mdx
@@ -34,7 +34,7 @@ This how-to guide uses the following {{prodname}} features:
 
 **Verify orchestrator support for changing the pod network CIDR**.
 
-Although Kubernetes supports changing the pod network CIDR, not all orchestrators do. For example, OpenShift does not support this feature as described in [`osm_cluster_network_cidr configuration`](https://docs.openshift.org/latest/install_config/install/advanced_install.html#configuring-cluster-variables). Check your orchestrator documentation to verify.
+Although Kubernetes supports changing the pod network CIDR, not all orchestrators do. Check your orchestrator documentation to verify.
 
 ## How to
 
