--- a/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/rbac-tiered-policies.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/rbac-tiered-policies.mdx
@@ -106,7 +106,7 @@ kubectl create clusterrolebinding permissive-binding \
 All users using {{prodname}} Manager should be able to create authorizationreviews and authorizationrequests as well as access
 license information through the services/proxy https:tigera-api:8080.
 
-1. Download the [min-ui-user-rbac.yaml manifest]({{filesUrl_CE}}/getting-started/kubernetes/installation/hosted/cnx/demo-manifests/min-ui-user-rbac.yaml).
+1. Download the [min-ui-user-rbac.yaml manifest]({{tutorialFilesURL}}/min-ui-user-rbac.yaml).
    The roles and bindings in this file provide a minimum starting point for setting up RBAC for your users according to your specific security requirements.
    This manifest provides basic RBAC to view some statistical data in the UI but does not provide permissions to
    view or modify any network policy related configuration.
@@ -189,7 +189,7 @@ kubectl get networkpolicies.p --field-selector spec.tier=net-sec
 
 ### User can view all policies, and modify policies in the default namespace and tier
 
-1. Download the [`read-all-crud-default-rbac.yaml` manifest]({{filesUrl_CE}}/getting-started/kubernetes/installation/hosted/cnx/demo-manifests/read-all-crud-default-rbac.yaml).
+1. Download the [`read-all-crud-default-rbac.yaml` manifest]({{tutorialFilesURL}}/read-all-crud-default-rbac.yaml).
 
 1. Run the following command to replace `<USER\>` with the `name or email` of
    the user you are providing permissions to:
