--- a/calico-enterprise/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise/visibility/elastic/l7/configure.mdx
@@ -50,7 +50,7 @@ L7 logs are visible in the Manager UI, service graph, in the HTTP tab.
 
 :::note
 
-L7 logs require a minimum of 1 additional GB of log storage per node, per one-day retention period. Adjust your [Log Storage](../../../operations/logstorage/adjust-log-storage-size.mdx) before you start tasks in the next section.
+L7 logs require a minimum of 1 additional GB of log storage per node, per one-day retention period. Adjust your [Log Storage](../../operations/logstorage/adjust-log-storage-size) before you start tasks in the next section.
 
 :::
 
