--- a/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
@@ -4,7 +4,7 @@ description: Install Calico Enterprise on an RKE2 cluster.
 
 # RKE2 - Rancher's Next Generation Kubernetes Distribution
 
-## Big picture
+## Big picture TBD
 
 Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2) clusters using the CLI or Rancher UI.
 
@@ -128,6 +128,7 @@ watch kubectl get tigerastatus
 ```
 
 </TabItem>
+
 <TabItem label="Rancher UI" value="UI-1">
 
 Rancher UI does not explicitly provide an option to set the RKE2 CNI value as `none`. This is a requirement for installing a non-default CNI on RKE2. To install {{prodname}} using Rancher UI, a base RKE2 cluster with opensource Calico needs to be provisioned by Rancher first. This cluster can then be upgraded to {{prodname}}.
