--- a/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
@@ -4,7 +4,10 @@ description: Install Calico Enterprise on an RKE2 cluster.
 
 # RKE2 - Rancher's Next Generation Kubernetes Distribution
 
-## Big picture TBD
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+## Big picture 
 
 Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2) clusters using the CLI or Rancher UI.
 
