--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/rke2.mdx
@@ -4,9 +4,12 @@ description: Install Calico Enterprise on an RKE2 cluster.
 
 # RKE2 - Rancher's Next Generation Kubernetes Distribution
 
-## Big picture
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
-Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2) clusters.
+## Big picture 
+
+Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2) clusters using the CLI or Rancher UI.
 
 ## Before you begin
 
@@ -25,13 +28,13 @@ The geeky details of what you get:
 
 - A [compatible RKE2 cluster](../compatibility.mdx#rke2)
 
-  For help, see [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en).
+  For help, see [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en/).
 
-- [Configure cluster with no CNI plugin](https://docs.rke2.io/reference/server_config#rke2-server-cli-help) using any of these methods:
+- [Configure cluster with no CNI plugin](https://docs.rke2.io/install/configuration) using any of these methods:
 
   - RKE2 CLI: `--cni none`
   - Install script: `RKE2_CNI=none`
-  - [Configuration file](https://docs.rke2.io/reference/server_config#rke2-server-cli-help): `cni: none`
+  - [Configuration file](https://docs.rke2.io/install/configuration#configuration-file): `cni: none`
 
 - Cluster meets [system requirements](requirements.mdx)
 
@@ -41,12 +44,15 @@ The geeky details of what you get:
 
   - Ensure you have the [Kubeconfig file that was generated when you created the cluster](https://docs.rke2.io/cluster_access).
 
-- If using a Kubeconfig file locally, [install and set up the Kubectl CLI tool](https://kubernetes.io/docs/tasks/tools/install-kubectl).
+- If using a Kubeconfig file locally, [install and set up the Kubectl CLI tool](https://kubernetes.io/docs/tasks/tools/install-kubectl/).
 
 ## How to
 
-- [Install {{prodname}}](#install-calico-enterprise)
-- [Install the {{prodname}} license](#install-the-calico-enterprise-license)
+- [Install {{prodname}} using the CLI](#install-calico-enterprise-using-the-cli)
+- [Install {{prodname}} using Rancher UI](#install-calico-enterprise-using-rancher-ui)
+
+<Tabs>
+<TabItem label="CLI" value="CLI-0">
 
 ### Install {{prodname}}
 
@@ -123,6 +129,57 @@ Monitor progress with the following command:
 ```batch
 watch kubectl get tigerastatus
 ```
+
+</TabItem>
+
+<TabItem label="Rancher UI" value="UI-1">
+
+Rancher UI does not explicitly provide an option to set the RKE2 CNI value as `none`. This is a requirement for installing a non-default CNI on RKE2. To install {{prodname}} using Rancher UI, a base RKE2 cluster with opensource Calico needs to be provisioned by Rancher first. This cluster can then be upgraded to {{prodname}}.
+
+### Prepare a base opensource Calico cluster
+
+1. [Provision a RKE2 cluster using Calico as CNI and default config options](https://ranchermanager.docs.rancher.com/pages-for-subheaders/launch-kubernetes-with-rancher)
+2. Validate the RKE2 cluster is setup and running.
+3. Update the Cluster Config by adding the following `HelmChartConfig` to the Additional Manifest section. In the UI navigate to Edit Config > Add on config > Additional Manifest.
+   ```yaml
+   apiVersion: helm.cattle.io/v1
+   kind: HelmChartConfig
+   metadata:
+     name: rke2-calico
+     namespace: kube-system
+   spec:
+     valuesContent: |-
+      installation:
+        imagePath: ""
+        imagePrefix: ""
+      calicoctl:
+        enabled: false
+   ```
+4. Wait for Config update to take effect and Cluster change state to Active .
+5. SSH to all the Control plane nodes and rename `rke2-calico.yaml` in the `/var/lib/rancher/rke2/server/manifests/` directory to `rke2-calico.yaml.skip`.
+   ```batch
+   sudo mv /var/lib/rancher/rke2/server/manifests/rke2-calico.yaml /var/lib/rancher/rke2/server/manifests/rke2-calico.yaml.skip
+   ```
+
+### Upgrade {{prodname}}
+
+1. Open a `kubectl` shell in the Rancher UI for the cluster.
+
+2. Follow the [steps to upgrade Calico to {{prodname}} in the `kubectl` shell](../upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx).
+
+### Install the {{prodname}} license
+
+```batch
+kubectl create -f </path/to/license.yaml>
+```
+
+Monitor progress with the following command:
+
+```batch
+watch kubectl get tigerastatus
+```
+</TabItem>
+  </Tabs>
 
 ## Next steps
 
