--- a/calico-cloud/release-notes/index.mdx
+++ b/calico-cloud/release-notes/index.mdx
@@ -4,6 +4,31 @@ description: What's new, and why features provide value for upgrading.
 
 # Release notes
 
+## February 7, 2023
+
+### New and improved Dashboards
+
+Calico Cloud includes new and improved Dashboards that enable operators to define cluster- and namespace-scoped dashboards with new modules for policy usage, application layer and DNS metrics, and much more.
+
+### Configure Threat Feeds in the Calico Cloud UI
+
+Calico Cloud includes a new UI that can be used to manage and configure global threat feeds
+
+## Namespace-based policy recommendations
+
+Calico Cloud has improved its policy recommendation engine to add namespace-based recommendations.
+This enables operators to easily implement microsegmentation for namespaces.
+
+### Create custom roles for Calico Clouc users
+
+Calico Cloud adminstrators can now define granular roles and permissions for users using custom role-based access controls.
+
+
+### Egress gateway improvements
+
+Calico Cloud has improved the probes to check readiness and outbound connectivity of egress gateways.
+Calico Cloud has also rearchitected egress gateway pods to improve security and make use of a temporary init container to set up packet forwarding.
+
 ## December 13, 2022
 
 ### Search by CVE in Image Assurance
