--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/kubernetes/standard.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/kubernetes/standard.mdx
@@ -35,7 +35,7 @@ Extend your Kubernetes deployment to Windows environments.
   - Download the {{prodnameWindows}} installation script:
 
   ```powershell
-  Invoke-WebRequest {{filesUrl}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+  Invoke-WebRequest {{tmpScriptsURL}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
   ```
 
   - Run the {{prodnameWindows}} installation script:
