--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -118,7 +118,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{filesUrl}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{tmpScriptsURL}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -207,7 +207,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{filesUrl}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{tmpScriptsURL}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -361,7 +361,7 @@ this installation method has [additional requirements](https://kubernetes.io/doc
 To install ContainerD on the Windows node and configure the ContainerD service:
 
 ```powershell
-Invoke-WebRequest {{filesUrl}}/scripts/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
+Invoke-WebRequest {{tmpScriptsURL}}/scripts/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
 c:\Install-Containerd.ps1 -ContainerDVersion 1.6.2 -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
 ```
 
@@ -372,7 +372,7 @@ To join a Windows node to a cluster provisioned with kubeadm:
 - Install kubeadm and kubelet binaries and install the kubelet service
 
 ```powershell
-Invoke-WebRequest {{filesUrl}}/scripts/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
+Invoke-WebRequest {{tmpScriptsURL}}/scripts/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
 c:\PrepareNode.ps1 -KubernetesVersion v1.23.4 -ContainerRuntime ContainerD
 ```
 
