--- a/calico-enterprise/networking/egress/egress-gateway-maintenance.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-maintenance.mdx
@@ -110,6 +110,7 @@ Success! Our workload's annotations mark a 60-second maintenance window for the 
 :::note
 
 - Adjusting egress deployments, say, by modifying the `terminationGracePeriodSeconds` field, will trigger a new rollout.
+- IPPool specified should be large enough to include terminating pods.
 - Egress pods terminating due to a new rollout will behave the same as if they were deleted for maintenance - dependent workloads will receive gateway maintenance annotations, and gateway pods will terminate after their termination grace period has elapsed.
 - Deleting an egress gateway in a way that overrides the termination grace period, say, by using `kubectl delete pod my-pod --grace-period=0`, will result in the gateway going down immediately, and dependent workloads will not have any time to react to the termination.
 
