--- a/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
@@ -30,6 +30,7 @@ Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2)
    For help, see [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en/).
 
 - **CLI users only**
+
    [Configure cluster without a CNI plugin](https://docs.rke2.io/install/configuration) using any of these methods:
 
     - RKE2 CLI: `--cni none`
@@ -133,11 +134,11 @@ watch kubectl get tigerastatus
 
 <TabItem label="Rancher UI" value="UI-1">
 
-Unlike the Rancher CLI, the Rancher UI does not provide an option to set the RKE2 CNI value as `none` which is required by RKE2 to install a non-default CNI like {{prodname}}. To install {{prodname}} using Rancher UI, you must first provision an RKE2 cluster with Calico Open Source, then upgrade it to {{prodname}}.
+Unlike the Rancher CLI, the Rancher UI does not provide an option to set the RKE2 CNI value as `none`, which is required by RKE2 to install a non-default CNI like {{prodname}}. To install {{prodname}} using Rancher UI, you must first provision an RKE2 cluster with Calico Open Source, then upgrade it to {{prodname}}.
 
 ### Provision RKE2 cluster with Calico Open Source
 
-1. [Provision an RKE2 cluster using Calico as CNI and the default config options](https://ranchermanager.docs.rancher.com/pages-for-subheaders/launch-kubernetes-with-rancher)
+1. [Provision an RKE2 cluster using Calico as CNI and the default config option](https://ranchermanager.docs.rancher.com/pages-for-subheaders/launch-kubernetes-with-rancher)
 2. Validate the RKE2 cluster is set up and running.
 3. Update the Cluster Config by adding the following `HelmChartConfig` to the Additional Manifest section. (In the UI, navigate to **Edit Config**, **Add on config**, **Additional Manifest**.)
 
