Modified the tutorial to make it static

--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -4,35 +4,8 @@ description: Learn how you can apply ALP to your workloads and control ingress t
 
 # Enforce application layer policies on your apps (tutorial)
 
-This tutorial sets up a microservices application, then demonstrates how to use {{prodname}} application layer policy to mitigate some common threats.
-
-## Prerequisites
-
-1. Build a Kubernetes cluster.
-2. Install {{prodname}} on Kubernetes:
-
-- If {{prodname}} is not installed on Kubernetes, see [Calico on Kubernetes](../../getting-started/install-on-clusters/kubernetes/quickstart.mdx).
-- If {{prodname}} is already installed on Kubernetes, verify that [Calico networking](../../networking/index.mdx) (or a non-Calico CNI) and {{prodname}} network policy are installed.
-
-3. [Enable application layer policy](./alp.mdx).
-   
-
-### Install the demo application
-
-We will use a simple microservice application to demonstrate {{prodname}}
-application layer policy. The [YAO Bank](https://github.com/projectcalico/yaobank) application creates a
-customer-facing web application, a microservice that serves up account
-summaries, and an [etcd](https://github.com/coreos/etcd) datastore.
-
-```batch
-kubectl apply -f {{filesUrl}}/security/tutorials/app-layer-policy/manifests/10-yaobank.yaml
-```
-
-Verify that the application pods have been created and are ready.
-
-    kubectl get pods
-
-When the demo application has come up, you will see three pods.
+This tutorial demonstrates how to use {{prodname}} application layer policy to mitigate some common threats in a sample banking application.
+Assume that the application is installed in your {{prodname}} cluster and that the following application pods are running. 
 
 ```
 NAME                        READY     STATUS    RESTARTS   AGE
@@ -57,9 +30,9 @@ Notice that from here, we get direct access to the backend database. For example
 (Piping to `python -m json.tool` nicely formats the output.)
 
 
-#### Applying network policy
+## Applying a network policy
 
-With a {{prodname}} policy, you can mitigate risks to the YAO Bank application.
+With a {{prodname}} policy, you can mitigate risks to the banking application.
 
     wget {{filesUrl}}/security/tutorials/app-layer-policy/manifests/30-policy.yaml
     calicoctl create -f 30-policy.yaml
