--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -56,7 +56,7 @@ spec:
     - action: Allow
 ```
 
-The first policy protects the customer web app. Since this application is customer facing, we do not
+The first policy protects the customer web app. Because this application is customer-facing, we do not
 restrict what can communicate with it. We do, however, restrict its communications to HTTP `GET`
 requests.
 
@@ -98,6 +98,8 @@ spec:
 
 The third policy protects the database. Only the summary microservice should have direct access to
 the database.
+
+### Verify the policy is working
 
 Let's verify our policy is working as intended. First, return to your browser and refresh to
 ensure policy enforcement has not broken the application.
