--- a/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
@@ -106,7 +106,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{calicoReleasesURL}}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{manifestsUrl}}/node/windows-packaging/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -204,7 +204,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{calicoReleasesURL}}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{manifestsUrl}}/node/windows-packaging/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -291,7 +291,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{url}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{manifestsUrl}}/node/windows-packaging/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -444,7 +444,7 @@ this installation method has [additional requirements](https://kubernetes.io/doc
 To install ContainerD on the Windows node and configure the ContainerD service:
 
 ```powershell
-Invoke-WebRequest {{tmpScriptsURL}}/scripts/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
+Invoke-WebRequest {{manifestsUrl}}/node/windows-packaging/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
 c:\Install-Containerd.ps1 -ContainerDVersion 1.6.2 -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
 ```
 
@@ -455,7 +455,7 @@ To join a Windows node to a cluster provisioned with kubeadm:
 - Install kubeadm and kubelet binaries and install the kubelet service
 
 ```powershell
-Invoke-WebRequest {{tmpScriptsURL}}/scripts/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
+Invoke-WebRequest {{manifestsUrl}}/node/windows-packaging/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
 c:\PrepareNode.ps1 -KubernetesVersion v1.23.4 -ContainerRuntime ContainerD
 ```
 
