--- a/calico-cloud/reference/component-resources/node/felix/configuration.mdx
+++ b/calico-cloud/reference/component-resources/node/felix/configuration.mdx
@@ -79,7 +79,7 @@ The full list of parameters which can be set is as follows.
 | `PrometheusProcessMetricsEnabled`   | `FELIX_PROMETHEUSPROCESSMETRICSENABLED`                                                              | Set to `false` to disable process metrics collection, which the Prometheus client does by default. This reduces the number of metrics reported, reducing Prometheus load. [Default: `true`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | boolean                                                                                         |
 | `PrometheusWireguardMetricsEnabled` | `FELIX_PROMETHEUSWIREGUARDMETRICSENABLED`                                                            | Set to `false` to disable wireguard device metrics collection, which Felix does by default. [Default: `true`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | boolean                                                                                         |
 | `RemoveExternalRoutes`              | `FELIX_REMOVEEXTERNALROUTES`                                                                         | Whether or not to remove device routes that have not been programmed by Felix. Disabling this will allow external applications to also add device routes. [Default: `true`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | bool                                                                                            |
-| `ReportingIntervalSecs`             | `FELIX_REPORTINGINTERVALSECS`                                                                        | Interval at which Felix reports its status into the datastore or `0` to disable. Must be non-zero in OpenStack deployments. [Default: `30`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | int                                                                                             |
+| `ReportingIntervalSecs`             | `FELIX_REPORTINGINTERVALSECS`                                                                        | Interval at which Felix reports its status into the datastore. 0 means disabled and is correct for Kubernetes-only clusters. Must be non-zero in OpenStack deployments. [Default: `30`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | int                                                                                             |
 | `ReportingTTLSecs`                  | `FELIX_REPORTINGTTLSECS`                                                                             | Time-to-live setting for process-wide status reports. [Default: `90`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | int                                                                                             |
 | `RouteTableRange`                   | `FELIX_ROUTETABLERANGE`                                                                              | _deprecated in favor of `RouteTableRanges`_ Calico programs additional Linux route tables for various purposes. `RouteTableRange` specifies the indices of the route tables that Calico should use. [Default: `""`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | `<min>-<max>`                                                                                   |
 | `RouteTableRanges`                  | `FELIX_ROUTETABLERANGES`                                                                             | Calico programs additional Linux route tables for various purposes. `RouteTableRanges` specifies a set of table index ranges that Calico should use. Deprecates `RouteTableRange`, overrides `RouteTableRange`. [Default: `"1-250"`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | `<min>-<max>,<min>-<max>,...`                                                                   |
