change from calicoctl to kubectl

--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -35,7 +35,7 @@ Notice that from here, we get direct access to the backend database. For example
 With a {{prodname}} policy, you can mitigate risks to the banking application.
 
     wget {{filesUrl}}/security/tutorials/app-layer-policy/manifests/30-policy.yaml
-    calicoctl create -f 30-policy.yaml
+    kubectl create -f 30-policy.yaml
 
 
 Let's examine this policy piece by piece. It consists of three policy objects, one for each
