--- a/calico-cloud/release-notes/index.mdx
+++ b/calico-cloud/release-notes/index.mdx
@@ -19,7 +19,7 @@ Calico Cloud includes a new UI that can be used to manage and configure global t
 Calico Cloud has improved its policy recommendation engine to add namespace-based recommendations.
 This enables operators to easily implement microsegmentation for namespaces.
 
-### Create custom roles for Calico Clouc users
+### Create custom roles for Calico Cloud users
 
 Calico Cloud adminstrators can now define granular roles and permissions for users using custom role-based access controls.
 
