--- a/calico-enterprise_versioned_docs/version-3.15/threat/honeypod/honeypods.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/threat/honeypod/honeypods.mdx
@@ -49,7 +49,7 @@ kubectl apply -f {{filesUrl}}/manifests/threatdef/honeypod/common.yaml
 Add `tigera-pull-secret` into the namespace `tigera-internal`:
 
 ```batch
-kubectl create secret generic tigera-pull-secret --from-file=.dockerconfigjson=<pull-secrets.json> --type=kubernetes.io/dockerconfigjson -n tigera-internal
+kubectl get secret tigera-pull-secret --namespace=calico-system -o yaml | sed 's/namespace: .*/namespace: tigera-internal/' | kubectl apply -f -
 ```
 
 ### Deploy honeypods in clusters
