Removing  junk characters from the yaml file
Fixing the issues in other versions

--- a/calico/operations/image-options/alternate-registry.mdx
+++ b/calico/operations/image-options/alternate-registry.mdx
@@ -81,5 +81,6 @@ spec:
   variant: Calico
   imagePullSecrets:
     - name: tigera-pull-secret
-  <b>registry: myregistry.com</b>
+    // highlight-next-line
+      registry: myregistry.com
 ```
