--- a/calico_versioned_docs/version-3.24/operations/image-options/alternate-registry.mdx
+++ b/calico_versioned_docs/version-3.24/operations/image-options/alternate-registry.mdx
@@ -81,5 +81,6 @@ spec:
   variant: Calico
   imagePullSecrets:
     - name: tigera-pull-secret
-  <b>registry: myregistry.com</b>
+    // highlight-next-line
+      registry: myregistry.com
 ```
