Adds IA release notes for 7 Feb CC release Fixes comment in _redirects file.

--- a/calico-cloud_versioned_docs/version-3.15/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/release-notes/index.mdx
@@ -14,7 +14,7 @@ Calico Cloud includes new and improved Dashboards that enable operators to defin
 
 Calico Cloud includes a new UI that can be used to manage and configure global threat feeds
 
-## Namespace-based policy recommendations
+### Namespace-based policy recommendations
 
 Calico Cloud has improved its policy recommendation engine to add namespace-based recommendations.
 This enables operators to easily implement microsegmentation for namespaces.
@@ -23,11 +23,17 @@ This enables operators to easily implement microsegmentation for namespaces.
 
 Calico Cloud adminstrators can now define granular roles and permissions for users using custom role-based access controls.
 
-
 ### Egress gateway improvements
 
 Calico Cloud has improved the probes to check readiness and outbound connectivity of egress gateways.
 Calico Cloud has also rearchitected egress gateway pods to improve security and make use of a temporary init container to set up packet forwarding.
+
+### Image Assurance updates
+
+* CLI Version v1.3.4
+* Calico Cloud supports the Image Assurance CLI scanner versions 1.3.0 and later.
+* **Bug fix:** Previously, the scanner returned an error if it reached a size limit while uploading vulnerabilities.
+  This size limit has been removed.
 
 ## December 13, 2022
 
@@ -63,7 +69,7 @@ All users can view the status and health of the Calico Cloud service on our new 
 
 CLI Version v1.1.2.
 
-New CLI will now check that it is compatible with the the latest Image Assurance API.
+New CLI will now check that it is compatible with the latest Image Assurance API.
 
 ### Container Threat Detection
 
