--- a/calico-cloud/operations/disconnect.mdx
+++ b/calico-cloud/operations/disconnect.mdx
@@ -41,4 +41,4 @@ To remove policies from tiers, you have these options:
 
 ## Next steps
 
-Continue using your cluster with open-source [Project Calico](https://docs.projectcalico.org/about/about-calico).
+Continue using your cluster with open-source [Project Calico](https://docs.tigera.io/calico).
