--- a/calico-enterprise/operations/ebpf/install.mdx
+++ b/calico-enterprise/operations/ebpf/install.mdx
@@ -295,7 +295,7 @@ For example:
 
 ```yaml
  This section includes base Calico Enterprise installation configuration.
- For more information, see: https://docs.tigera.io/master/reference/installation/api#operator.tigera.io/v1.Installation
+ For more information, see: https://docs.tigera.io/calico-enterprise/latest/reference/installation/api/#operator.tigera.io/v1
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
