--- a/calico-enterprise/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-aws.mdx
@@ -742,16 +742,21 @@ spec:
   ipPools:
   - name: "egress-red-west-1"
   - name: "egress-red-west-2"
-  egressGatewayFailureDetection:
-    healthTimeoutDataStoreSeconds: 30
-    icmpProbe:
-      ips: ["34.56.2.7"]
-      timeoutSeconds: 15
-      intervalSeconds: 5
-    httpProbe:
-      urls: ["http://example.com"]
-      timeoutSeconds: 30
-      intervalSeconds: 10
+# Uncomment this block to add ICMP, HTTP probes
+# egressGatewayFailureDetection:
+#   healthTimeoutDataStoreSeconds: 30
+#   icmpProbe:
+#     ips:
+#     - <IP to probe>
+#     - <IP to probe>
+#     timeoutSeconds: 15
+#     intervalSeconds: 5
+#   httpProbe:
+#     urls:
+#     - <URL to probe>
+#     - <URL to probe>
+#     timeoutSeconds: 30
+#     intervalSeconds: 10
   aws:
     nativeIP: Enabled
   template:
@@ -819,8 +824,8 @@ spec:
   ```yaml
   icmpProbe:
     ips:
-    - probeIP
-    - probeIP
+    - <IP to probe>
+    - <IP to probe>
     timeoutSeconds: 20
     intervalSeconds: 10
   ```
@@ -833,8 +838,8 @@ spec:
   ```yaml
   httpProbe:
     urls:
-    - probeURL
-    - probeURL
+    - <URL to probe>
+    - <URL to probe>
     timeoutSeconds: 30
     intervalSeconds: 10
   ```
